--- a/package.json
+++ b/package.json
@@ -1,16 +1,24 @@
 {
-  "name": "gulp-ng-seed",
+  "name": "ra-wedding",
   "version": "0.0.0",
   "main": "app.js",
   "devDependencies": {
     "gulp": "~3.5.5",
     "gulp-angular-templatecache": "^1.1.0",
+    "gulp-autoprefixer": "0.0.8",
     "gulp-bower-files": "^0.2.4",
+    "gulp-cache": "^0.2.0",
     "gulp-concat": "~2.1.7",
     "gulp-connect": "^1.0.7",
+    "gulp-csso": "^0.2.9",
     "gulp-filter": "^0.4.1",
+    "gulp-imagemin": "^0.6.1",
     "gulp-jshint": "~1.5.0",
     "gulp-load-plugins": "~0.4.0",
+    "gulp-minify-html": "^0.1.4",
+    "gulp-size": "^0.4.0",
+    "gulp-uglify": "^0.3.1",
+    "gulp-uncss": "^0.4.5",
     "karma": "^0.12.1",
     "karma-chrome-launcher": "^0.1.2",
     "karma-jasmine": "^0.1.5"
